<?xml version="1.0" encoding="utf-8"?>
<resources>
    <integer name="com_vk_sdk_AppId">5160284</integer>
    <string name="app_id">543395344679</string>

    <string name="hello">Hello World, QuizAppActivity!</string>
    <string name="app_name">Знание сила</string>
    <!--<string name="app_id">286312204670</string>-->

	<string name="no_categories">Please add Quiz Categories</string>
	<string name="categories">Categories</string>
	<string name="final_score">You have scored %d points</string>
	<string name="share_points">I just scored %d points on Quiz</string>
	<string name="high_scores">High Scores</string>
	<string name="tap_to_zoom">Tap to zoom</string>
	<string name="tap_to_play">Tap to play</string>
	<string name="loading_video">Loading Video, please wait...</string>
	<string name="more_apps">More Apps</string>
	<string name="chartboost_error_msg">Either Chartboost AppID or AppSecret is not configured</string>
	<string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="world_score">РЕЙТИНГ</string>
    <string name="play_quiz">НОВАЯ ИГРА</string>
    <string name="about">About</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="restore">Restore</string>
    <string name="quiz_skip_text">ПРОПУСТИТЬ</string>
    <string name="cats_purchasable_title">КУПИТЬ КАТЕГОРИЮ</string>
    <string name="cats_passed_title">\u0020\u0020ПРОЙДЕННЫЕ КАТЕГОРИИ</string>
    <string formatted="false" name="points_record">%s НАБРАНО ВАМИ ИЗ %d</string>
    <string name="title_activity_knwoledge_description">KnwoledgeDescription</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cats_choose_title">ВЫБЕРИТЕ КАТЕГОРИЮ</string>
    <string name="correct_text">ПРАВИЛЬНО!</string>
    <string name="wrong_text">НЕПРАВИЛЬНО!</string>
    <string name="signin_other_error">К сожаление, подключение к сервису Google Games в данный момент невозможно.</string>
    <string name="signin_failure">Произошла ошибка во время подключения к сервису Google Games, попробуйте позднее</string>
    <string name="points_text_5">баллов</string>
    <string name="points_text_1">балл</string>
    <string name="points_text_2">балла</string>
</resources>