<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
	
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="48dip"
		    android:paddingLeft="10dip"
		    android:background="@drawable/footer_normal">
		    <TextView android:id="@+id/title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:textSize="28sp"
		        android:textColor="#FFFFFF"
		        android:text="@string/app_name" />
		    
		    <Button android:id="@+id/restore"  
				    android:layout_height="35dp"
				    android:layout_width="wrap_content"
				    android:text="@string/restore"
			    	android:background="@drawable/button_normal"
			    	android:textColor="@android:color/white"
			    	android:gravity="center"
			    	android:textSize="17sp" 
			    	android:layout_alignParentRight="true"
			    	android:layout_centerVertical="true"
			    	android:layout_marginRight="10dp"
			    	android:visibility="gone"/>
		    
		</RelativeLayout>
		
		<LinearLayout android:id="@+id/main_layout"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:paddingTop="10dip"
		    android:visibility="visible"
		    android:layout_weight="1"
		    android:gravity="center_vertical">
			
		    
		    	<Button android:id="@+id/play_quiz"  
				    android:layout_height="wrap_content"
				    android:layout_width="150dp"
				    android:text="@string/play_quiz"
			    	android:background="@drawable/main_button_bg"
			    	android:textColor="@android:color/white"
			    	android:layout_gravity="center"
			    	android:gravity="center"
			    	android:textSize="17sp" 
			    	android:layout_marginBottom="20dp"/>
		    	
		    	<Button android:id="@+id/world_score"  
				    android:layout_height="wrap_content"
				    android:layout_width="150dp"
				    android:text="@string/world_score"
			    	android:background="@drawable/main_button_bg"
			    	android:textColor="@android:color/white"
			    	android:layout_gravity="center"
			    	android:gravity="center"
			    	android:textSize="17sp"
			    	android:layout_marginBottom="20dp"/>
			    	
		    	<Button android:id="@+id/about"  
				    android:layout_height="wrap_content"
				    android:layout_width="150dp"
				    android:text="@string/about"
			    	android:background="@drawable/main_button_bg"
			    	android:textColor="@android:color/white"
			    	android:layout_gravity="center"
			    	android:gravity="center"
			    	android:textSize="17sp"
			    	android:layout_marginBottom="20dp"/>  
			    	
		    	<Button android:id="@+id/remove_ads"  
				    android:layout_height="wrap_content"
				    android:layout_width="150dp"
				    android:text="@string/remove_ads"
			    	android:background="@drawable/main_button_bg"
			    	android:textColor="@android:color/white"
			    	android:layout_gravity="center"
			    	android:gravity="center"
			    	android:textSize="17sp"/>  
		    	
		    
		</LinearLayout>
		
		<Button android:id="@+id/more_apps"  
		    android:layout_height="wrap_content"
		    android:layout_width="match_parent"
		    android:layout_weight="0.2"
		    android:text="@string/more_apps"
	    	android:onClick="onMoreButtonClick"
	    	android:background="@android:color/transparent"
	    	android:textColor="@android:color/white"
	    	android:layout_gravity="center"
	    	android:textSize="17sp">
		    
		</Button>
	</LinearLayout>
</FrameLayout>